@@ -14,8 +14,8 @@ CREATE TABLE tx_tagpack_tags_quodvide_mm (
   hidden tinyint(4) DEFAULT '0' NOT NULL,
   tablenames varchar(30) DEFAULT '' NOT NULL,
   sorting int(11) DEFAULT '0' NOT NULL,
-  KEY uid_local (uid_local),
-  KEY uid_foreign (uid_foreign)
+  UNIQUE KEY uid_foreign_tablenames (uid_foreign,tablenames),
+  KEY uid_local_foreign (uid_local,uid_foreign)
 );
 
 #
@@ -34,8 +34,8 @@ CREATE TABLE tx_tagpack_tags_relations_mm (
   hidden tinyint(4) DEFAULT '0' NOT NULL,
   tablenames varchar(30) DEFAULT '' NOT NULL,
   sorting int(11) DEFAULT '0' NOT NULL,
-  KEY uid_local (uid_local),
-  KEY uid_foreign (uid_foreign)
+  UNIQUE KEY uid_foreign_tablenames (uid_foreign,tablenames),
+  KEY uid_local_foreign (uid_local,uid_foreign)
 );
 
 #
@@ -89,4 +89,3 @@ CREATE TABLE tx_tagpack_categories (
 	PRIMARY KEY (uid),
 	KEY parent (pid)
 );
-
